--- a/CSS-GRID/griddisplay.html
+++ b/CSS-GRID/griddisplay.html
@@ -10,12 +10,16 @@
     <h1>Página de Estudos - Grid Display</h1>
 
     <div class="container">
-        <div class="item">1</div>
+        <!-- <div class="item">1</div>
         <div class="item">2</div>
         <div class="item">3</div>
         <div class="item">4</div>
         <div class="item">5</div>
-        <div class="item">6</div>
+        <div class="item">6</div> -->
+        <div class="cabecalho">Cabeçalho</div>
+        <div class="lateral">Lateral</div>
+        <div class="conteudo">Conteúdo</div>
+        <div class="rodape">Rodapé</div>
     </div>
 </body>
 </html>
